k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: babki
---
apiVersion: v1
kind: Namespace
metadata:
  name: babki-gateway
