k8s/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: babki
  namespace: babki-gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      hostname: api.babki.localhost
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: babki
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: babki-api
  namespace: babki
spec:
  parentRefs:
    - name: babki
      namespace: babki-gateway
      sectionName: http
  hostnames: [api.babki.localhost]
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: babki-api
          port: 5001
          weight: 1
